fixed scrolling in mobile & overflow issues.  Also fixed 'Home' button going back up to top, changed the hyperlink at the bottom to open mail and be white, fixed projects to be standard with about

--- a/public/style.css
+++ b/public/style.css
@@ -178,6 +178,14 @@ p {
     padding-top: 70px;
 }
 
+.projectDetails{
+    position: absolute;
+    left: 20%;
+    top: 0%;
+    max-width: 60%;
+    padding-top: 70px;
+}
+
 #me {
     width: 40%;
     height: 40%;
@@ -231,6 +239,15 @@ button.slick-next:before {
     content: '';
 }
 
+/*Link to my e-mail address*/
+
+#parabg5 > div.aboutdetails > p:nth-child(2) > a:link {
+    color: white;
+}
+#parabg5 > div.aboutdetails > p:nth-child(2) > a:visited {
+    color: grey;
+}
+
 @media screen and (max-width: 800px) {
 
     .nav a{
@@ -249,14 +266,26 @@ button.slick-next:before {
 
     #me {
         width:100%;
-        height:100%;
+        /*height:100%;*/
     }
 
     .aboutdetails{
+        height: 100%;
         left: 5%;
         max-width: 90%;
         padding-top: 18px;
         overflow: scroll;
+    }
+
+    .projectDetails{
+      height: 100%;
+      left: 5%;
+      max-width: 90%;
+      padding-top: 18px;
+      overflow: scroll;
+    }
+    .aboutdetails img{
+      /*height: auto !important;*/
     }
 
 }
